feat(端点管理): 端点管理
端点管理部分重命名端点属性配置相关，并优化更新端点配置和属性配置方法